--- a/main.tex
+++ b/main.tex
@@ -2049,6 +2049,27 @@ Serves 1
 \end{paracol}
 \end{densecard}
 
+\begin{recipe}{Extra-Light and Foamy Eggnog}{\totaltime{15 min}}
+\begin{ingredients}
+4 eggs, separated
+70 g sugar
+350 ml whole milk
+240 ml cream
+240 ml dark rum, brandy, or a mix
+freshly grated nutmeg, to garnish
+\end{ingredients}
+\nextcolumn
+Serves 6 to 8
+\begin{steps}
+    \item Whip egg whites to soft peaks, add half of sugar and whip to stiff peaks
+    \item Separately, beat egg yolks with rest of sugar until pale yellow and ribbony
+    \item Mix in milk, cream and alcohol
+    \item Fold in egg whites
+    \item Ladle into goblets and grate on nutmeg
+\end{steps}
+For more complexity, age in refrigerator for up to a year and blend with a fresh batch.
+\end{recipe}
+
 % ===========================
 % === New recipe template ===
 % ===========================
