--- a/main.tex
+++ b/main.tex
@@ -2049,7 +2049,7 @@ Serves 1
 \end{paracol}
 \end{densecard}
 
-\begin{recipe}{Extra-Light and Foamy Eggnog}{\totaltime{15 min}}
+\begin{recipe}{Extra-Light and Foamy Eggnog}{\tag{V}\totaltime{15 min}}
 \begin{ingredients}
 4 eggs, separated
 70 g sugar
@@ -2068,6 +2068,28 @@ Serves 6 to 8
     \item Ladle into goblets and grate on nutmeg
 \end{steps}
 For more complexity, age in refrigerator for up to a year and blend with a fresh batch.
+\end{recipe}
+
+% To be seen if this is solid enough to withstand baking
+\begin{recipe}{Figgy Christmas Star Filling}{\tag{VG}\totaltime{30 min}}
+\begin{ingredients}
+200 g dried figs, roughly chopped
+3 dl water
+1 dl sugar
+1 stick cinnamon
+1/4 dl amaretto
+1 tbsp cornstarch + 1~tbsp water
+\end{ingredients}
+\nextcolumn
+Makes 2 cups
+\begin{steps}
+    \item Bring figs, water, sugar, cinnamon to boil
+    \item Simmer for 20 minutes, until figs are soft
+    \item Remove cinnamon
+    \item Blend until mostly smooth
+    \item Mix cornstarch with water
+    \item Stir slurry into the filling, bring to boil and cook for 1 minute, stirring constantly
+\end{steps}
 \end{recipe}
 
 % ===========================
