Gin graved salmon

--- a/main.tex
+++ b/main.tex
@@ -2092,6 +2092,26 @@ Makes 2 cups
 \end{steps}
 \end{recipe}
 
+\begin{recipe}{Gin Graved Salmon}{\totaltime{1 day}}
+\begin{ingredients}
+800 g salmon fillet, deboned
+1/4 dl gin
+2 tbsp kosher salt
+1 tbsp granulated sugar
+1 tbsp crushed juniper berries
+\end{ingredients}
+\nextcolumn
+Serves 12
+\begin{steps}
+    \item Place salmon onto parchment stacked on foil and raise the edges to contain the gin
+    \item Pour gin all over the salmon
+    \item Mix all spices and sprinkle onto salmon
+    \item Wrap tightly and place in plastic bag
+    \item Refrigerate under light weight for 1 to 1~1/2 days
+    \item Wipe and cut into thin slices
+\end{steps}
+\end{recipe}
+
 % ===========================
 % === New recipe template ===
 % ===========================
