Mostly christmas foods

--- a/main.tex
+++ b/main.tex
@@ -2054,7 +2054,7 @@ Serves 1
 4 eggs, separated
 70 g sugar
 350 ml whole milk
-240 ml cream
+240 ml heavy cream
 240 ml dark rum, brandy, or a mix
 freshly grated nutmeg, to garnish
 \end{ingredients}
@@ -2097,7 +2097,7 @@ Makes 2 cups
 800 g salmon fillet, deboned
 1/4 dl gin
 2 tbsp kosher salt
-1 tbsp granulated sugar
+2 tsp granulated sugar
 1 tbsp crushed juniper berries
 \end{ingredients}
 \nextcolumn
@@ -2109,6 +2109,106 @@ Serves 12
     \item Wrap tightly and place in plastic bag
     \item Refrigerate under light weight for 1 to 1~1/2 days
     \item Wipe and cut into thin slices
+\end{steps}
+\end{recipe}
+
+\begin{recipe}{Rice Porridge}{\tag{V}\totaltime{45 min}}
+\begin{ingredients}
+1 1/2 dl short grain rice
+8 dl whole milk
+1/2 tsp kosher salt
+\end{ingredients}
+\nextcolumn
+Serves 2
+\begin{steps}
+    \item Add all ingredients into pressure cooker
+    \item Cook at high pressure for 1 minute and natural release for at least 30 minutes
+    \item Depressurize and stir until smooth
+    \item Season to taste with more salt
+\end{steps}
+\end{recipe}
+
+\begin{recipe}{Dried Fruit Soup}{\tag{VG}\totaltime{20 min}}
+\begin{ingredients}
+250 g dried fruits, such as raisins or apricots
+7 dl water
+1/2 dl sugar
+1 stick cinnamon
+2 tbsp cornstarch + 1/2 dl water
+1 tbsp lemon juice
+\end{ingredients}
+\nextcolumn
+Serves 4
+\begin{steps}
+    \item Bring fruit, water, sugar and cinnamon to boil
+    \item Simmer until fruit is softened, about 10 minutes
+    \item Remove cinnamon
+    \item Mix cornstarch, water and lemon juice
+    \item Stir slurry into soup, bring to boil and cook for 1 minutes, stirring constantly
+\end{steps}
+\end{recipe}
+
+\begin{recipe}{Potato Flat Bread}{\tag{V}\preheat{\fahrenheit{500}}\totaltime{30 min}}
+\begin{ingredients}
+3 dl potato puree
+1 1/2 tsp kosher salt
+1 egg
+3 dl flour
+\end{ingredients}
+\nextcolumn
+Serves 4
+\begin{steps}
+    \item Mix all ingredients until thoroughly combined, but don't knead
+    \item Portion in mounds onto parchment papered baking sheet
+    \item Flatten with floured hands
+    \item Prick all over with a fork
+    \item Bake at \fahrenheit{500} until well browned in spots, about 15 minutes
+\end{steps}
+\end{recipe}
+
+\begin{denserecipe}{Rutabaga Casserole}{\tag{V}\preheat{\fahrenheit{350}}\totaltime{2 h 40 min}}
+\begin{ingredients}
+1 kg rutabagas, peeled and roughly diced
+2 dl heavy cream
+2 eggs
+1 1/2 tsp kosher salt
+1 tsp ginger
+1/4 tsp allspice
+1/4 tsp nutmeg
+3/4 dl finnish or golden syrup
+butter and breadcrumbs, for topping
+\end{ingredients}
+\nextcolumn
+Serves 8
+\begin{steps}
+    \item Boil rutabaga in salted water until soft, about 30 minutes
+    \item Save 1 dl cooking water and drain rutabaga
+    \item Puree rutabaga
+    \item Combine ingredients up to syrup, check for salt and adjust consistency with saved water
+    \item Transfer to buttered baking dish, top with butter shavings and breadcrumbs and shape surface with a spoon
+    \item Bake at \fahrenheit{350} for 2 hours
+\end{steps}
+\end{denserecipe}
+
+\begin{recipe}{Creamy Mushroom Salad}{\tag{V}\totaltime{1 h}}
+\begin{ingredients}
+1 lb mixed mushrooms, finely diced
+1 shallot, minced
+1 tbsp minced chives
+1 dl heavy cream
+1 dl creme fraiche
+1 tsp vinegar
+salt and pepper
+\end{ingredients}
+\nextcolumn
+Serves 8
+\begin{steps}
+    \item Cook mushrooms in a dry pan on medium heat until they release water
+    \item Simmer slowly for 5 minutes
+    \item Drain and reserve liquid for another use
+    \item Whip cream to soft peaks
+    \item Mix all ingredients with cooled mushrooms and season with salt and pepper
+    \item Rest in refrigerator for 15 minutes
 \end{steps}
 \end{recipe}
 
