Bread and mustard

--- a/main.tex
+++ b/main.tex
@@ -2175,7 +2175,7 @@ Serves 4
 1 tsp ginger
 1/4 tsp allspice
 1/4 tsp nutmeg
-3/4 dl finnish or golden syrup
+3/4 dl dark syrup
 butter and breadcrumbs, for topping
 \end{ingredients}
 \nextcolumn
@@ -2209,6 +2209,52 @@ Serves 8
     \item Whip cream to soft peaks
     \item Mix all ingredients with cooled mushrooms and season with salt and pepper
     \item Rest in refrigerator for 15 minutes
+\end{steps}
+\end{recipe}
+
+\begin{denserecipe}{Coastal Bread}{\tag{V}\preheat{\fahrenheit{350}}\totaltime{4 h}}
+\begin{ingredients}
+25 g instant yeast, about 3 tbsp
+3 dl beer malts
+3 dl wheat bran
+3 dl rye flour
+10 dl wheat flour
+1 l piimä or kefir
+3 dl dark syrup
+2 tbsp kosher salt
+1/2 dl dark syrup + 1 dl water, for brushing
+\end{ingredients}
+\nextcolumn
+Makes enough for 3 pans of 1 1/2 liters each
+\begin{steps}
+    \item Mix yeast, malts, bran and flours
+    \item Heat piimä, syrup and salt to \celsius{42}
+    \item Add dry ingredients and mix until fully combined, but don't knead
+    \item Let rise covered in a warm place for 1 1/2 hours, or overnight in refrigerator
+    \item Ladle into buttered pans leaving 1/4 free
+    \item Let rise until the dough fills the pans
+    \item Bake at \fahrenheit{350} for 1 1/2 hours, brushing loaves with syrup-water mixture after 1 hour
+\end{steps}
+Coastal bread is at its best after 1 to 2 days.
+\end{denserecipe}
+
+\begin{recipe}{Strong Christmas Mustard}{\tag{V}\totaltime{20 min}}
+\begin{ingredients}
+113 g Colman's mustard powder
+85 g sugar
+200 g heavy cream
+1/2 tbsp kosher salt
+1 tbsp neutral oil
+1 tbsp white wine vinegar
+1 egg
+1 tbsp cognac, \mbox{optional}
+\end{ingredients}
+\nextcolumn
+\begin{steps}
+    \item Mix mustard and sugar in a small non-stick saucepan
+    \item Add all remaining ingredients and whisk until thoroughly combined
+    \item Bring to a boil over medium-high heat, stirring constantly
+    \item Portion into glass jars
 \end{steps}
 \end{recipe}
 
