--- a/main.tex
+++ b/main.tex
@@ -2238,24 +2238,111 @@ Makes enough for 3 pans of 1 1/2 liters each
 Coastal bread is at its best after 1 to 2 days.
 \end{denserecipe}
 
-\begin{recipe}{Strong Christmas Mustard}{\tag{V}\totaltime{20 min}}
+\begin{recipe}{Tart Panna Cotta}{\tag{V}\totaltime{4 h 20 min}}
 \begin{ingredients}
-113 g Colman's mustard powder
-85 g sugar
-200 g heavy cream
-1/2 tbsp kosher salt
-1 tbsp neutral oil
-1 tbsp white wine vinegar
-1 egg
-1 tbsp cognac, \mbox{optional}
+1/2 envelope gelatin, just over 1 tsp
+3 tbsp water
+1 1/4 cups heavy cream
+1/4 cup sugar
+2 strips lemon peel
+tiniest pinch salt
+1/8 tsp vanilla extract
+1/4 cup buttermilk
+1 1/2 tsp lemon juice
+\end{ingredients}
+\nextcolumn
+Serves 4
+\begin{steps}
+    \item Bloom gelatin in water for 10 minutes
+    \item Bring cream, sugar, lemon peel, salt and vanilla to a bare simmer on medium heat
+    \item Add bloomed gelatin and whisk until fully dissolved
+    \item Stir in buttermilk and lemon juice
+    \item Strain and portion into serving bowls
+    \item Chill for 4 hours or preferably overnight
+\end{steps}
+\end{recipe}
+
+\begin{recipe}{Fast Caramelized Onions}{\tag{VG}\totaltime{30 min}}
+\begin{ingredients}
+3 lb onions, sliced through root
+3/4 cup water
+2 tbsp oil
+3/4 tsp kosher salt
+1/8 tsp baking soda + 1 tbsp water
 \end{ingredients}
 \nextcolumn
 \begin{steps}
-    \item Mix mustard and sugar in a small non-stick saucepan
-    \item Add all remaining ingredients and whisk until thoroughly combined
-    \item Bring to a boil over medium-high heat, stirring constantly
-    \item Portion into glass jars
+    \item Boil onions, water, oil and salt covered in non-stick skillet over high heat until water has evaporated, about 10 minutes
+    \item Uncover and reduce heat to medium-high
+    \item Cook without stirring for 30 seconds, scrape up fond, stir and press onions down
+    \item Repeat step 3 until onions are well browned and a bit sticky, about 15 to 20 minutes
+    \item Combine baking soda and water, stir into onions, and cook until solution evaporates, about 1 minute
 \end{steps}
+\end{recipe}
+
+\begin{recipe}{Champagne Sabayon}{\tag{V}\totaltime{15 min}}
+\begin{ingredients}
+3 yolks
+75 g sugar
+125 ml champagne
+small piece lemon rind
+400 g mixed berries, such as raspberries and blueberries
+\end{ingredients}
+\nextcolumn
+Serves 4
+\begin{steps}
+    \item Prepare double boiler
+    \item Whisk together yolks and sugar off heat
+    \item Add champagne and lemon, and whisk until sugar has dissolved
+    \item Cook, whisking constantly, until mixture foams and thickens, about 10 minutes
+    \item Pour over berries in serving dishes
+    \item Optionally, brown surface with blow torch
+\end{steps}
+\end{recipe}
+
+\begin{recipe}{Pomegranate Brussels Sprouts}{\tag{VG}\preheat{\fahrenheit{425}}\totaltime{30 min}}
+\begin{ingredients}
+1.5 lb brussels sprouts, halved
+3 tbsp olive oil
+salt and pepper
+1/4 cup chopped walnuts
+3 tbsp pomegranate seeds
+1 tsp pomegranate molasses
+flaky salt
+\end{ingredients}
+\nextcolumn
+Serves 4
+\begin{steps}
+    \item Toss brussels sprouts with oil
+    \item Season well with salt and pepper and toss
+    \item Roast on sheet pan until deeply brown, about 30 minutes, flipping halfway through
+    \item Meanwhile, toast walnuts in the same oven until aromatic, about 5 minutes
+    \item Toss brussels sprouts with walnuts and pomegranate seeds
+    \item Sprinkle on molasses and flaky salt
+\end{steps}
+\end{recipe}
+
+\begin{recipe}{Glögi Syrup}{\tag{VG}\totaltime{40 min}}
+\begin{ingredients}
+1 cup water
+2 cups sugar
+1 tbsp whole cloves
+1 inch ginger, sliced
+2 sticks cinnamon
+2 star anise pods
+1 tbsp cardamom seeds
+2 strips orange peel
+\end{ingredients}
+\nextcolumn
+Makes 2 cups
+\begin{steps}
+    \item Bring all ingredients to a boil
+    \item Let steep under a lid for 30 minutes
+    \item Strain out spices and bottle up
+\end{steps}
+Will keep in refrigerator for up to 6 months.
+
+Other spices to try: nutmeg vanilla allspice pink\ijoin{}peppercorns bay\ijoin{}leaves juniper\ijoin{}berries
 \end{recipe}
 
 % ===========================
@@ -2300,6 +2387,27 @@ Makes 30 cookies
     \item Fold in chocolate chips and nuts, if using
     \item Portion into 1 1/2 tbsp mounds
     \item Bake at \fahrenheit{375} until golden brown, about 9 to 11 minutes
+\end{steps}
+\end{recipe}
+
+% Came out too thick
+\begin{recipe}{Strong Christmas Mustard}{\tag{V}\totaltime{20 min}}
+\begin{ingredients}
+113 g Colman's mustard powder
+85 g sugar
+200 g heavy cream
+1/2 tbsp kosher salt
+1 tbsp neutral oil
+1 tbsp white wine vinegar
+1 egg
+1 tbsp cognac, \mbox{optional}
+\end{ingredients}
+\nextcolumn
+\begin{steps}
+    \item Mix mustard and sugar in a small non-stick saucepan
+    \item Add all remaining ingredients and whisk until thoroughly combined
+    \item Bring to a boil over medium-high heat, stirring constantly
+    \item Portion into glass jars
 \end{steps}
 \end{recipe}
 
