--- a/main.tex
+++ b/main.tex
@@ -2326,12 +2326,12 @@ Serves 4
 \begin{ingredients}
 1 cup water
 2 cups sugar
-1 tbsp whole cloves
 1 inch ginger, sliced
+2 strips orange peel
 2 sticks cinnamon
 2 star anise pods
+2 tsp whole cloves
 1 tbsp cardamom seeds
-2 strips orange peel
 \end{ingredients}
 \nextcolumn
 Makes 2 cups
@@ -2343,6 +2343,26 @@ Makes 2 cups
 Will keep in refrigerator for up to 6 months.
 
 Other spices to try: nutmeg vanilla allspice pink\ijoin{}peppercorns bay\ijoin{}leaves juniper\ijoin{}berries
+\end{recipe}
+
+\begin{recipe}{Piimäjuusto}{\tag{V}\totaltime{7 hours}}
+\begin{ingredients}
+1 1/2 l whole milk
+1/2 l piimä or kefir
+100 g sour cream
+2 small eggs
+1 tsp kosher salt
+\end{ingredients}
+\nextcolumn
+\begin{steps}
+    \item Bring ingredients to room temperature
+    \item Combine piimä, sour cream and eggs
+    \item Bring milk to \celsius{95}, stirring constantly
+    \item Take off heat and stir in piimä mixture
+    \item Rest under a lid in warm place until whey has separated, 1 to 2 hours
+    \item Lift curds into cheese cloth lined strainer, spreading the salt in between the layers
+    \item Cover with cloth and set in refrigerator under a light weight for 6 to 12 hours
+\end{steps}
 \end{recipe}
 
 % ===========================
