--- a/main.tex
+++ b/main.tex
@@ -2365,6 +2365,46 @@ Other spices to try: nutmeg vanilla allspice pink\ijoin{}peppercorns bay\ijoin{}
 \end{steps}
 \end{recipe}
 
+\begin{denserecipe}{All-Purpose Enriched Dough}{\tag{V}\totaltime{7 h}}
+\begin{ingredients}
+250 g whole milk
+50 + 500 g flour
+4 large eggs, chilled
+2 tbsp oil
+50 g sugar
+10 g salt (1.5 tsp kosher)
+1 1/2 tsp instant yeast
+113 g unsalted butter, chilled
+\end{ingredients}
+\nextcolumn
+Makes enough for 2 loaves
+\begin{steps}
+    \item Cook milk and 50 g flour on medium heat whisking constantly until very thick
+    \item Cover and cool to room temperature, 45 min
+    \item Mix in ingredients up to yeast on low with dough hook until combined, 3 min, scrape and mix on medium-low until elastic, 12 to 15 min
+    \item Scrape and add butter in two batches on low until fully combined, 10 min, scrape and mix on medium-low until very elastic, 10 to 15 min
+    \item Form into ball and rise at room temperature for 30 min, then in refrigerator for 4 to 24 h
+\end{steps}
+\end{denserecipe}
+
+\begin{denserecipe}{Hamburger Buns}{\tag{V}\preheat{\fahrenheit{350}}\totaltime{2 h 30 min}}
+\begin{ingredients}
+1 batch All-Purpose Enriched Dough, chilled
+1 egg, for brushing
+3 tbsp white sesame seeds 
+\end{ingredients}
+\nextcolumn
+Makes 10 buns
+\begin{steps}
+    \item Line two large baking sheets with parchment and spray with oil
+    \item Deflate dough and portion into ten pieces
+    \item Fold each piece until smooth, pinch into bulb and roll seams down into a ball
+    \item Place on sheets, sprinkle water around and proof covered until not springing back, 2 hours
+    \item Make egg wash, brush buns and sprinkle with sesame seeds
+    \item Bake at \fahrenheit{350} rotating after 13 minutes until deeply browned, 18 to 22 minutes
+\end{steps}
+\end{denserecipe}
+
 % ===========================
 % === New recipe template ===
 % ===========================
