--- a/main.tex
+++ b/main.tex
@@ -2390,7 +2390,7 @@ Makes enough for 2 loaves
 \begin{denserecipe}{Hamburger Buns}{\tag{V}\preheat{\fahrenheit{350}}\totaltime{2 h 30 min}}
 \begin{ingredients}
 1 batch All-Purpose Enriched Dough, chilled
-1 egg, for brushing
+1 egg, beaten
 3 tbsp white sesame seeds 
 \end{ingredients}
 \nextcolumn
@@ -2398,9 +2398,9 @@ Makes 10 buns
 \begin{steps}
     \item Line two large baking sheets with parchment and spray with oil
     \item Deflate dough and portion into ten pieces
-    \item Fold each piece until smooth, pinch into bulb and roll seams down into a ball
+    \item To shape, do folds to create smooth surface, pinch into bulb and roll with seams down
     \item Place on sheets, sprinkle water around and proof covered until not springing back, 2 hours
-    \item Make egg wash, brush buns and sprinkle with sesame seeds
+    \item Brush buns with egg and sprinkle with sesame
     \item Bake at \fahrenheit{350} rotating after 13 minutes until deeply browned, 18 to 22 minutes
 \end{steps}
 \end{denserecipe}
