--- a/main.tex
+++ b/main.tex
@@ -2374,7 +2374,7 @@ Other spices to try: nutmeg vanilla allspice pink\ijoin{}peppercorns bay\ijoin{}
 50 g sugar
 10 g salt (1.5 tsp kosher)
 1 1/2 tsp instant yeast
-113 g unsalted butter, chilled
+113 g unsalted butter, chilled and diced
 \end{ingredients}
 \nextcolumn
 Makes enough for 2 loaves
