Stews and pork medallions

--- a/main.tex
+++ b/main.tex
@@ -2405,6 +2405,119 @@ Makes 10 buns
 \end{steps}
 \end{denserecipe}
 
+\begin{denserecipe}{Seafood and Bean Stew}{\totaltime{30 min}}
+\begin{ingredients}
+1 tsp lemon zest
+1 tsp paprika
+2 cloves garlic, grated
+1/4 tsp kosher salt
+3/4 tsp black pepper
+1 lb shrimp or white fish
+4 tbsp butter
+2 large leeks, sliced
+15 oz white beans, rinsed
+2 cups chicken stock
+2 tbsp parsley, minced
+2 tbsp lemon juice
+\end{ingredients}
+\nextcolumn
+Serves 4
+\begin{steps}
+    \item Toss together ingredients up to seafood
+    \item Melt butter in a large pot
+    \item Cook seafood over medium-high heat until just done, 2 to 3 minutes
+    \item Lift seafood aside leaving butter in pot
+    \item Add leeks and season with salt and pepper
+    \item Cook over medium heat until soft, 5 minutes
+    \item Add beans and broth
+    \item Bring to boil and simmer for 8 to 10 minutes
+    \item Stir in seafood, parsley and lemon juice
+    \item Season with more salt and pepper
+\end{steps}
+\end{denserecipe}
+
+\begin{denserecipe}{Twice-Seared Pork Medallions}{\totaltime{30 min}}
+\begin{ingredients}
+1 lb pork tenderloin
+salt and pepper
+1 tbsp olive oil
+1 tbsp butter
+1/4 cup cream
+1 tbsp mustard, lemon juice or calvados
+parsley, chopped
+\end{ingredients}
+\nextcolumn
+Serves 4
+\begin{steps}
+    \item Season pork with salt and pepper
+    \item Heat oil to shimmering over medium-high heat
+    \item Brown tenderloin on all sides, 6 minutes
+    \item Remove from heat and rest on a board
+    \item When slightly cooled slice into medallions
+    \item Boil water from butter over medium-high heat
+    \item Brown medallions, 2 to 3 minutes per side
+    \item Remove meat and deglaze with 1/2 cup water
+    \item Add cream and cook until slightly thickened
+    \item Stir in chosen seasoning, spoon over meat and garnish with parsley
+\end{steps}
+\end{denserecipe}
+
+\begin{denserecipe}{Stewed Lentils With Sausage}{\totaltime{1 h 15 min}}
+\begin{ingredients}
+2 tbsp olive oil
+1 lb sausages
+2 cloves garlic
+3 carrots
+2 stalks celery
+1 small onion
+1 tbsp tomato paste
+salt and pepper
+3 cups chicken stock
+15 oz tomato puree
+2 cups lentils, rinsed
+2 bay leaves
+\end{ingredients}
+\nextcolumn
+Serves 6
+\begin{steps}
+    \item Sear sausages on all sides in oil over medium heat, 4 minutes, and lift aside
+    \item Add garlic, carrots, celery and onions
+    \item Season with salt and saute until translucent
+    \item Stir in tomato paste, then stock, tomato puree, lentils, sausages and bay leaves
+    \item Bring to a boil and simmer gently under cover stirring occasionally until thick, 50 minutes
+    \item Discard bay leaves and check for seasoning
+\end{steps}
+Garnish with grated pecorino or parmesan.
+\end{denserecipe}
+
+\begin{denserecipe}{Mushroom Strogaonoff}{\tag{V}\totaltime{30 min}}
+\begin{ingredients}
+1 onion, finely diced
+1 1/2 lb mixed mushrooms, sliced
+2 tsp olive oil
+2 sprigs thyme
+2 cloves garlic, minced
+1/2 cup white wine
+1 cup porcini tea
+2 tbsp soy sauce
+1 1/2 tsp dijon mustard
+1/2 cup creme fraiche
+salt and pepper
+\end{ingredients}
+\nextcolumn
+Serves 4
+\begin{steps}
+    \item Cook onion, mushrooms and 1/2 cup water in non-stick skillet on high until water is gone
+    \item Stir in oil, thyme, garlic and a pinch of salt
+    \item Cook on medium-high stirring occasionally until well browned, 10 minutes
+    \item Deglaze with wine and add stock, soy sauce
+    \item Reduce until slightly thickened, 5 minutes
+    \item Stir in mustad and creme fraiche
+    \item Season to taste with salt and pepper
+\end{steps}
+Garnish with paprika and chopped parsley.
+\end{denserecipe}
+
 % ===========================
 % === New recipe template ===
 % ===========================
