--- a/main.tex
+++ b/main.tex
@@ -133,6 +133,7 @@
 
 \newcommand{\ihead}[1]{\ful{#1}}
 \newcommand{\ijoin}{$\cdot{}$}
+\newcommand{\lihead}[1]{\ihead{#1}\vspace{-0.4em}}
 
 \begin{document}
 
@@ -2009,9 +2010,8 @@ Serves 1
     \item Toss potatoes with dressing and season with salt and pepper to taste
 \end{densesteps}
 \columnratio{0.333}
-\newcommand{\lpshead}[1]{\ihead{#1}\vspace{-0.25em}}
 \begin{paracol}{3}
-\lpshead{Lighter Scandinavian}
+\lihead{Lighter Scandinavian}
 
 \begin{ingredients}
 1/2 tbsp vinegar
@@ -2023,7 +2023,7 @@ Serves 1
 2 tbsp minced dill
 \end{ingredients}
 \nextcolumn
-\lpshead{Spicy Kimchi}
+\lihead{Spicy Kimchi}
 
 \begin{ingredients}
 1/4 cup mayonnaise
@@ -2035,7 +2035,7 @@ Serves 1
 1 tsp sriracha
 \end{ingredients}
 \nextcolumn
-\lpshead{Vegan Tahini}
+\lihead{Vegan Tahini}
 
 \begin{ingredients}
 1/3 cup olive oil
@@ -2440,7 +2440,7 @@ Serves 4
 \begin{ingredients}
 1 lb pork tenderloin
 salt and pepper
-1 tbsp olive oil
+2 tbsp olive oil
 1 tbsp butter
 1/4 cup cream
 1 tbsp mustard, lemon juice or calvados
@@ -2517,6 +2517,55 @@ Serves 4
 \end{steps}
 Garnish with paprika and chopped parsley.
 \end{denserecipe}
+
+\begin{densecard}{Egg en Cocotte}{\preheat{\fahrenheit{350}}\totaltime{30 min}}
+\begin{densesteps}
+    \item Grease ramekin, spoon in filling, crack in egg, drizzle with 2 tsp cream, season with salt and pepper
+    \item Bake at \fahrenheit{350} in boiling water bath until whites are just set, 15 minutes
+\end{densesteps}
+\columnratio{0.333}
+\begin{paracol}{3}
+\lihead{Crab Imperial}
+
+\begin{ingredients}
+50 g crabmeat
+1 tbsp mayonnaise
+1 tsp dijon mustard
+1 tsp minced parsley
+1 tsp sliced scallion
+pinch cayenne
+salt and pepper
+old bay, for garnish
+\end{ingredients}
+\nextcolumn
+\lihead{Florentine}
+
+\begin{ingredients}
+2 tbsp Creamed Spinach
+nutmeg, for garnish
+\end{ingredients}
+
+\lihead{Double Up}
+
+\begin{ingredients}
+1 tbsp finely diced red~onion
+1 tbsp creme fraiche
+salt and pepper
+1 tbsp roe, for garnish
+\end{ingredients}
+\nextcolumn
+\lihead{Classic Salmon}
+
+\begin{ingredients}
+1 tbsp minced shallot, sauteed in butter
+1 tbsp creme fraiche
+1/2 tsp chopped dill
+1/8 tsp lemon zest
+salt
+50 g smoked salmon, for garnish
+\end{ingredients}
+\end{paracol}
+\end{densecard}
 
 % ===========================
 % === New recipe template ===
