Watermelon and crab

--- a/main.tex
+++ b/main.tex
@@ -2567,6 +2567,27 @@ salt
 \end{paracol}
 \end{densecard}
 
+\begin{recipe}{Thai Watermelon and Crab}{\totaltime{10 min}}
+\begin{ingredients}
+2 lb watermelon, \hphantom{ } chopped
+2 ripe tomatoes, \hphantom{ } chopped
+1 clove garlic, minced
+2 tbsp lime juice
+1 tsp fish sauce
+fresh hot chili to taste, minced
+1/2 lb crabmeat
+cilantro, for garnish
+\end{ingredients}
+\nextcolumn
+Serves 6 as appetizer
+\begin{steps}
+    \item Add watermelon, tomatoes, garlic, lime juice, fish sauce and a conservative amount of chili to a blender
+    \item Blend until smooth adding cold water to get it going if necessary
+    \item Check for seasoning, blending in more chili as needed
+    \item Pour onto plates, top with a mound of crabmeat and garnish with cilantro
+\end{steps}
+\end{recipe}
+
 % ===========================
 % === New recipe template ===
 % ===========================
