--- a/main.tex
+++ b/main.tex
@@ -2588,6 +2588,56 @@ Serves 6 as appetizer
 \end{steps}
 \end{recipe}
 
+\begin{denserecipe}{Thai Curry Broth with Tofu and Herbs}{\tag{VG}\totaltime{30 min}}
+\begin{ingredients}
+28 oz silken tofu, drained
+2 tbsp oil
+2 shallots, minced
+3 cloves garlic, sliced
+1 inch ginger, grated
+3 tbsp red curry paste
+14 oz cherry tomatoes
+1 l vegetable stock
+14 oz coconut milk
+1/4 cup soy sauce
+1 1/2 cups mixed herbs
+2 scallions, sliced
+\end{ingredients}
+\nextcolumn
+Serves 6
+\begin{steps}
+    \item Saute shallots in oil until softened
+    \item Add garlic, ginger and curry paste, and cook until fragrant
+    \item Add tomatoes and simmer for 5 min
+    \item Add stock and reduce on medium for 10 min
+    \item Stir in coconut milk and check for salt
+    \item Divide tofu into bowls, top each with 2 tsp soy sauce, black pepper and 1/4 cup herbs, ladle broth on top, and garnish with scallions
+\end{steps}
+Cilantro, basil and dill work well for the herbs. Serve with lime wedges for squeezing.
+\end{denserecipe}
+
+\begin{recipe}{Summer Corn and Tomato Salad}{\tag{VG}\totaltime{15 min}}
+\begin{ingredients}
+5 ears corn in husks
+1 pint cherry tomatoes, halved
+1 lime, zest and juice
+3 tbsp olive oil
+salt
+1/4 tsp minced hot chile, optional
+1/2 cup basil, torn
+1/4 cup cilantro, torn
+\end{ingredients}
+\nextcolumn
+Serves 6
+\begin{steps}
+    \item Microwave corn in husks on high for 3 minutes and shuck, or if already shucked boil or steam for 2 minutes
+    \item Cut kernels off cobs
+    \item Combine corn, tomatoes, lime and oil
+    \item Season to taste with salt and chile
+    \item Fold in herbs
+\end{steps}
+\end{recipe}
+
 % ===========================
 % === New recipe template ===
 % ===========================
