Healthy recipes and fixes

--- a/main.tex
+++ b/main.tex
@@ -2462,14 +2462,14 @@ Serves 4
 \end{steps}
 \end{denserecipe}
 
-\begin{denserecipe}{Stewed Lentils With Sausage}{\totaltime{1 h 15 min}}
+\begin{denserecipe}{Lentil and Sausage Stew}{\totaltime{1 h 30 min}}
 \begin{ingredients}
 2 tbsp olive oil
-1 lb sausages
-2 cloves garlic
-3 carrots
-2 stalks celery
-1 small onion
+1 lb sausages, sliced
+2 cloves garlic, minced
+3 carrots, finely diced
+2 stalks celery, diced
+1 small onion, diced
 1 tbsp tomato paste
 salt and pepper
 3 cups chicken stock
@@ -2480,10 +2480,11 @@ salt and pepper
 \nextcolumn
 Serves 6
 \begin{steps}
-    \item Sear sausages on all sides in oil over medium heat, 4 minutes, and lift aside
-    \item Add garlic, carrots, celery and onions
-    \item Season with salt and saute until translucent
-    \item Stir in tomato paste, then stock, tomato puree, lentils, sausages and bay leaves
+    \item Sear sausages on in oil over medium heat
+    \item Add vegetables and tomato paste
+    \item Season with salt and pepper
+    \item Saute until translucent
+    \item Add stock, tomato puree, lentils and bay leaves
     \item Bring to a boil and simmer gently under cover stirring occasionally until thick, 50 minutes
     \item Discard bay leaves and check for seasoning
 \end{steps}
@@ -2635,6 +2636,114 @@ Serves 6
     \item Combine corn, tomatoes, lime and oil
     \item Season to taste with salt and chile
     \item Fold in herbs
+\end{steps}
+\end{recipe}
+
+\begin{denserecipe}{Orzo, Lentil and Zucchini Salad}{\tag{VG}\totaltime{40 min}}
+\begin{ingredients}
+1 cup lentils
+1 cup orzo
+1/2 cup olive oil
+1/4 cup lemon juice
+1/4 cup sliced pickled pepperoncini
+salt and pepper
+1 lb zucchini or summer squash, sliced
+2/3 cup pistachios, chopped
+3 scallions, sliced
+1 cup packed herbs
+\end{ingredients}
+\nextcolumn
+Serves 6
+\begin{steps}
+    \item Bring pot of salted water to boil
+    \item Add lentils, cook for 9 minutes, add orzo and cook until done, another 10 to 12 minutes
+    \item Meanwhile, combine oil, lemon juice and pepperoncini
+    \item Season to taste with salt and pepper, about 1/2 tsp each
+    \item Combine dressing with lentils, orzo, zucchini, pistachios and scallions
+    \item Check for seasoning
+    \item Fold in herbs just before serving
+\end{steps}
+\end{denserecipe}
+
+\begin{denserecipe}{Lentil Pasta Stew}{\tag{V}\totaltime{1 h}}
+\begin{ingredients}
+3 tbsp olive oil
+1 onion, chopped
+8 cloves garlic, smashed
+1 1/2 tsp kosher salt
+pepper
+5 cups water
+1 cup lentils
+3 sprigs thyme, optional
+3 bay leaves, optional
+800 g crushed tomatoes
+275 g penne
+1/2 cup parmesan, grated
+\end{ingredients}
+\nextcolumn
+Serves 6
+\begin{steps}
+    \item Saute onion and garlic in oil with salt and some pepper until golden
+    \item Add water, lentils, thyme and bay leaves
+    \item Bring to boil and simmer partially covered until lentils are al dente, 25 minutes
+    \item Add tomatoes and bring to boil
+    \item Cook, stirring often, until pasta is al dente, 10 to 20 minutes, adding water as necessary
+    \item Take off heat and discard thyme and bay leaves
+    \item Stir in parmesan and let sit for 3 minutes
+    \item Check for seasoning
+\end{steps}
+\end{denserecipe}
+
+\begin{denserecipe}{Sticky Coconut Chicken and Rice}{\preheat{\fahrenheit{375}}\totaltime{45 min}}
+\begin{ingredients}
+1 1/2 lb chicken thighs
+3 tbsp oil
+2 tsp kosher salt
+1/2 tsp black pepper
+2 tbsp minced ginger
+1 tbsp minced garlic
+1 1/2 cups sushi rice
+1 3/4 cups chicken broth
+14 oz coconut milk
+1 bell pepper, chopped
+1/2 cup roasted cashews
+3 scallions, thinly sliced
+\end{ingredients}
+\nextcolumn
+Serves 4
+\begin{steps}
+    \item Remove any bone and skin from chicken and cut each thigh in two; roughly chop cashews
+    \item Season chicken with 1 tsp salt
+    \item Brown chicken in oil in dutch oven, set aside
+    \item Add ginger and garlic and cook until fragrant
+    \item Stir in rice, and add remaining ingredients
+    \item Arrange chicken on top and bring to boil
+    \item Bake covered at \fahrenheit{375} until all liquid is absorbed and chicken is cooked, 25 minutes
+\end{steps}
+
+Garnish with herbs, such as cilantro and parsley. Serve with hot sauce.
+\end{denserecipe}
+
+\begin{recipe}{Bay Scallops with Preserved Lemon}{\totaltime{20 min}}
+\begin{ingredients}
+2 tbsp butter
+2 sprigs rosemary
+2 cloves garlic, minced
+1 lb bay scallops
+1 tbsp minced preserved lemon
+kosher salt and pepper
+1 tsp lemon juice
+chopped fennel fronds or parsley
+\end{ingredients}
+\nextcolumn
+Serves 2
+\begin{steps}
+    \item Brown butter in non-stick pan on medium
+    \item Add rosemary and garlic, cook until fragrant, then lower heat to medium-low
+    \item Add scallops, preserved lemon and a large pinch of salt and cook, stirring, until scallops are just opaque, 2 to 4 minutes
+    \item Let sit off heat for a few more minutes
+    \item Add pepper, lemon juice and more salt
+    \item Garnish with fennel fronds or parsley
 \end{steps}
 \end{recipe}
 
