Retire obsolete recipe

--- a/main.tex
+++ b/main.tex
@@ -1624,31 +1624,6 @@ Serves 4
 Garnish with more cilantro.
 \end{denserecipe}
 
-\begin{recipe}{Baked Eggs with Smoked Salmon}{\preheat{\fahrenheit{400}}\totaltime{45 min}}
-\begin{ingredients}
-1/2 tbsp butter
-2 tbsp shallot, minced
-1/8 tsp salt
-2 tbsp creme fraiche
-2+2 tbsp heavy cream
-1 tsp dill, chopped
-1/4 tsp lemon zest
-4 large eggs, at room temperature
-black pepper
-50 g smoked salmon
-\end{ingredients}
-\nextcolumn
-Serves 2
-\begin{steps}
-    \item Brush two 8-ounce ramekins with butter
-    \item Saute shallots with salt in butter
-    \item Stir in 2 tbsp cream, creme fraiche, dill and zest, then divide between ramekins
-    \item To each ramekin crack in 2 eggs, float 1 tbsp cream, sprinkle with salt and pepper
-    \item Bake at \fahrenheit{400} until whites are just set, about 12 to 16 minutes
-    \item Top with smoked salmon and more dill
-\end{steps}
-\end{recipe}
-
 \begin{recipe}{Orange and Radish Salad}{\tag{VG}\totaltime{15 min}}
 \begin{ingredients}
 1/3 cup lemon juice (about 2 lemons)
@@ -2810,6 +2785,32 @@ Makes 30 cookies
     \item Add all remaining ingredients and whisk until thoroughly combined
     \item Bring to a boil over medium-high heat, stirring constantly
     \item Portion into glass jars
+\end{steps}
+\end{recipe}
+
+% Retired for a more general card
+\begin{recipe}{Baked Eggs with Smoked Salmon}{\preheat{\fahrenheit{400}}\totaltime{45 min}}
+\begin{ingredients}
+1/2 tbsp butter
+2 tbsp shallot, minced
+1/8 tsp salt
+2 tbsp creme fraiche
+2+2 tbsp heavy cream
+1 tsp dill, chopped
+1/4 tsp lemon zest
+4 large eggs, at room temperature
+black pepper
+50 g smoked salmon
+\end{ingredients}
+\nextcolumn
+Serves 2
+\begin{steps}
+    \item Brush two 8-ounce ramekins with butter
+    \item Saute shallots with salt in butter
+    \item Stir in 2 tbsp cream, creme fraiche, dill and zest, then divide between ramekins
+    \item To each ramekin crack in 2 eggs, float 1 tbsp cream, sprinkle with salt and pepper
+    \item Bake at \fahrenheit{400} until whites are just set, about 12 to 16 minutes
+    \item Top with smoked salmon and more dill
 \end{steps}
 \end{recipe}
 
