--- a/main.tex
+++ b/main.tex
@@ -2722,6 +2722,50 @@ Serves 2
 \end{steps}
 \end{recipe}
 
+\begin{recipe}{Tangzhong Oat and Carrot Rolls}{\tag{V}\preheat{\fahrenheit{375}}\totaltime{}}
+\begin{ingredients}
+35 g + 415 g flour
+170 g + 170 g milk
+2 dl grated carrot
+10 g salt (1 1/2~tsp kosher)
+10 g molasses (2/3~tbsp)
+1/3 dl oil
+2 dl rolled oats
+2 1/4 tsp instant yeast
+1/2 dl bran
+\end{ingredients}
+\nextcolumn
+Makes enough to fill 2 baking sheets
+\begin{steps}
+    \item Cook 35 g flour and 170 g milk on medium heat whisking until thickened
+    \item Whisk in remaining milk, carrot, salt, \mbox{molasses}, oil and rolled oats
+    \item Let cool to \celsius{45}
+    \item Combine yeast, bran and remaining flour
+    \item Mix 
+\end{steps}
+\end{recipe}
+
+\begin{recipe}{Gochujang Skirt Steak}{\totaltime{1 h}}
+\begin{ingredients}
+3 tbsp gochujang
+3 tbsp olive oil
+3 tbsp rice vinegar
+1 tbsp sugar
+2 tsp kosher salt
+1/2 medium red onion, grated
+1 lb skirt steak, trimmed
+\end{ingredients}
+\nextcolumn
+Serves 4
+\begin{steps}
+    \item Combine all ingredients before steak
+    \item Coat steak with marinade in a bag and chill for 30 minutes to 12 hours
+    \item Preheat broiler with rack in highest spot
+    \item Broil on a foil lined baking sheet in one layer for 4 minutes, turn, and broil 3 to 4 minutes more, until medium-rare
+    \item Rest under foil for 10 minutes, slice against the grain and sprinkle with more salt
+\end{steps}
+\end{recipe}
+
 % ===========================
 % === New recipe template ===
 % ===========================
